nginx-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-with-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx-with-svc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/templates/default.conf.template
              subPath: default.conf.template
            - name: config-volume
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: config-volume
          configMap:
            name: nginx-config
