pod-with-pvc.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: config-volume
      mountPath: /etc/nginx
    - name: auth-secret
      mountPath: /usr/local/nginx/conf/.htpasswd
      subPath: .htpasswd
      readOnly: true
    - name: persistent-storage
      mountPath: /usr/share/nginx/html
  volumes:
  - name: config-volume
    configMap:
      name: nginx-config
  - name: auth-secret
    secret:
      secretName: nginx-basic-auth
  - name: persistent-storage
    persistentVolumeClaim:
      claimName: nginx-pvc
