loadbalancer-service.yml
# Получать доступ к приложению, используя набор IP-адресов узлов кластера и порта сервиса NodePort, не очень удобно.
# Для доступа к приложению нужен единый IP-адрес. Вручную это можно реализовать, создав виртуальную машину для
# балансировки нагрузки и настроить маршрутизацию трафика на целевые узлы. Это нетривиальная задача, которая требует
# дополнительных ресурсов на управление и обслуживание.

apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  type: LoadBalancer
  ports:
    targetPort: 80
    port: 80
  selector:
    name: front-end
