nodeport-service.yml
# Сервис типа NodePort обеспечивает внешний доступ к приложению. Kubernetes связывает порты на всех узлах с портом сервиса.
# Это значит, что, используя публичный IP-адрес любого узла в кластере и выделенный номер порта, пользователь получает доступ к приложению.

apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  type: NodePort
  ports:
    targetPort: 80
    port: 80
    nodePort: 30001  # Порт на узле, который будет использован для доступа к приложению снаружи кластера. Значение этого порта может находиться только в допустимом диапазоне от 30000 до 32767.
  selector:
    name: front-end
